k8s/blog.yml
apiVersion: v1
kind: Namespace
metadata:
  name: Jerney
  labels:
    app.kubernetes.io/part-of: jerney

apiVersion: v1
kind: Secret
metadata: 
  name: db-secret-jerney
  namespace: Jerney
  labels:
    app.kubernetes.io/part-of: jerney
type: Opaque
data: 
  POSTGRES_USER: amVybmV5X3VzZXI=
  POSTGRES_PASSWORD: amVybmV5X3Bhc3NfMjAyNg==
  POSTGRES_DB: amVybmV5X2Ri

apiVersion: storage.k8s.io/v1
kind: StorageClass
metadata:
  name: jerney-ebs-sc
provisioner: ebs.csi.eks.amazonaws.com
parameters:
  type: gp3
  encrypted: "true"
ReclaimPolicy: Retain
VolumeBindingMode: WaitForFirstConsumer
allowVolumeExpansion: true

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: postgres-pvc
  namespace: Jerney
  labels:
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
spec:
  accessModes:
    - ReadWriteOnce
  storageClassName: jerney-ebs-sc
  resources:
    requests:
      storage: 20Gi

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-db
  namespace: Jerney
  labels:
    app.kubernetes.io/name: jerney-db
    app.kubernetes.io/part-of: Jerney
    app.kubernetes.io/component: database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-db
        app.kubernetes.io/part-of: Jerney
        app.kubernetes.io/component: database
  spec:
    autoMountServiceAccountToken: false
    tolerations:
      - key: "karpenter.sh/disrupted"
        operator: "Exists"
        effect: "NoSchedule"
    containers:
      - name: jerney-db
        image: postgres:15
        ports: 
          - containerport: 5432
            protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
        securityContext:
          AllowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
    volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc

apiVersion: v1
kind: Service
metadata:
  name: jerney-db-service
  namespace: Jerney
  labels:
    app.kubernetes.io/name: jerney-db-service
    app.kubernetes.io/part-of: Jerney
    app.kubernetes.io/component: database
spec:
  type: ClusterIp
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: Jerney
  labels:
    app.kubernetes.io/name: db-network-policy
    app.kubernetes.io/part-of: Jerney
    app.kubernetes.io/component: database
spec: 
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jerney-frontend
      ports:
        - protocol: TCP
          port: 5432

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-backend
  namespace: Jerney
  labels:
    name: jerney-backend
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: Jerney 
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  template:
    metadata:
      labels:
        name: jerney-backend
        app.kubernetes.io/name: jerney-backend
        app.kubernetes.io/part-of: Jerney 
        app.kubernetes.io/component: backend
  spec:
    autoMountServiceAccountToken: false
    tolerations:
      - key: "karpenter.sh/disrupted"
        operator: "Exists"
        effect: "NoSchedule"
    containers:
      - name: jerney-backend
        image: 
        ports:
          - containerPort: 8080
            protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          AllowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
              - ALL
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe: 
          httpGet:  
            path: /api/health
            port: 5000    
          initialDelaySeconds: 30
          periodSeconds: 10 
          timeoutSeconds: 5

apiVersion: v1
kind: Service
metadata:
  name: jerney-backend-service
  namespace: Jerney
  labels:
    app.kubernetes.io/name: jerney-backend-service
    app.kubernetes.io/part-of: Jerney
    app.kubernetes.io/component: backend
spec:
  type: ClusterIp
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: Jerney
  labels:
    app.kubernetes.io/name: backend-network-policy
    app.kubernetes.io/part-of: Jerney
    app.kubernetes.io/component: backend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jerney-frontend
      ports:
        - protocol: TCP
          port: 5000


apiVersion: v1
kind: Deployment  
metadata:
  name: frontend-deployment
  namespace: Jerney
  labels:
    app.kubernetes.io/name: frontend-deployment
    app.kubernetes.io/part-of: Jerney
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-frontend
  spec:
    autoMountServiceAccountToken: false
    tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
    containers:
      - name: frontend-container
        image: jerney/frontend:latest
        ports:
          - containerPort: 8080
            protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        securityContext:
          AllowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 101
          capabilities:
            drop:
              - ALL
        livenessProbe:
          httpGet: 
            path: /
            port: 8080
          initialDelaySeconds: 30 
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080  
          initialDelaySeconds: 15
          periodSeconds: 5  
          timeoutSeconds: 3

apiVersion: v1
kind: Service
metadata:
  name: jerney-frontend-service
  namespace: Jerney
  labels:
    app.kubernetes.io/name: jerney-frontend-service
    app.kubernetes.io/part-of: Jerney
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIp 
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-frontend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jerney-ingress
  namespace: Jerney

  labels:
    app.kubernetes.io/name: jerney-ingress
    app.kubernetes.io/part-of: Jerney
    app.kubernetes.io/component: ingress

spec:
  ingressClassName: nginx

  rules:
    - host: devops.xyz

      http:
        paths:

        
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: jerney-backend-service
                port:
                  number: 5000

     
          - path: /
            pathType: Prefix

            backend:
              service:
                name: jerney-frontend-service
                port:
                  number: 80
